syntax = "proto3";

package ru.grpc;

option java_multiple_files = true;

message NumberRangeRequest {
  int32 first_value = 1;
  int32 last_value = 2;
}

message NumberResponse {
  int32 value = 1;
}

service NumberService {
  rpc GetNumberStream (NumberRangeRequest) returns (stream NumberResponse);
}